--- a/package.json
+++ b/package.json
@@ -15,28 +15,33 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@types/uuid": "^10.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "openai": "^4.101.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
-    "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "react-day-picker": "^9.7.0",
     "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
